--- a/client/src/components/Canvas/canvas.scss
+++ b/client/src/components/Canvas/canvas.scss
@@ -5,9 +5,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0 4px 5px gray;
 }
 
 .canvas__gtx {
-  border: 2px solid black;
+  box-sizing: border-box;
   background-color: white;
+  width: 100%;
+  height: 100%;
 }
