--- a/client/src/components/ToolBar/toolBar.scss
+++ b/client/src/components/ToolBar/toolBar.scss
@@ -1,26 +1,41 @@
 .toolBar {
-  height: 40px;
-  background-color: white;
+  height: 100%;
+  background-color: #6b77ac;
   display: flex;
   align-items: center;
-  width: 100%;
+  flex-direction: column;
   box-shadow: 0 4px 5px gray;
   box-sizing: border-box;
+  padding: 10px 5px;
 
   .toolBar__btn_checked {
     outline: 2px dotted red;
+    border-radius: 1rem;
+  }
+
+  &__btn-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 0 5px 0;
+    border-bottom: 1.5px solid rgb(255, 255, 255);
+    box-sizing: border-box;
   }
 
   &__btn {
-    height: 28px;
-    width: 28px;
+    height: 38px;
+    width: 38px;
     border: none;
     outline: none;
     cursor: pointer;
     background-color: transparent;
-    margin: 0 10px;
-    padding: 2px;
+    margin: 6px;
+    padding: 6px;
     box-sizing: border-box;
+  }
+
+  &__btn:hover {
+    transform: scale(1.1, 1.1);
   }
 
   &__btn-image {
@@ -28,17 +43,15 @@
     width: 100%;
   }
   &__btn_rights {
-    margin-left: auto;
+    margin: 0;
+  }
+  &__btn_arrow-redo {
+    margin: 0;
   }
   &__btn_arrow-redo {
     transform: scale(-1, 1);
   }
-  &__input-color {
-    background: linear-gradient(
-      to right,
-      rgb(255, 29, 29),
-      rgb(1, 255, 1),
-      rgb(81, 81, 255)
-    );
+  &__btn_arrow-redo:hover {
+    transform: scale(-1.1, 1.1);
   }
 }
