--- a/client/src/components/ToolBar/toolBar.scss
+++ b/client/src/components/ToolBar/toolBar.scss
@@ -69,6 +69,7 @@
     box-sizing: border-box;
     padding: 2px;
     margin-top: 30px;
+    cursor: pointer;
   }
   &__rest-icon {
     width: 50px;
