--- a/client/src/components/CopyLink/copyLink.scss
+++ b/client/src/components/CopyLink/copyLink.scss
@@ -7,6 +7,7 @@
   border: 2px dotted rgb(216, 216, 216);
   box-sizing: border-box;
   padding: 3px;
+  cursor: pointer;
 
   &:hover {
     transform: scale(1.1, 1.1);
