--- a/client/src/components/CopyLink/copyLink.scss
+++ b/client/src/components/CopyLink/copyLink.scss
@@ -31,4 +31,27 @@
     font-weight: bold;
     margin-bottom: 5px;
   }
+
+  &__bts-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+  }
+
+  &__circle-copy {
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    background-color: gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid white;
+    transition: background-color 0.1s linear;
+  }
+
+  &__circle-copy_active {
+    background-color: rgb(0, 255, 0);
+  }
 }
